RESOLVED FIXED315572
REGRESSION(313872@main): Private field 'm_shouldSkipFrame' is not used
https://bugs.webkit.org/show_bug.cgi?id=315572
Summary REGRESSION(313872@main): Private field 'm_shouldSkipFrame' is not used
Jonathan Bedard
Reported 2026-05-26 08:52:20 PDT
https://commits.webkit.org/313872@main added a private field unused on Apple platforms.
Attachments
Jonathan Bedard
Comment 1 2026-05-26 08:52:21 PDT
Jonathan Bedard
Comment 2 2026-05-26 08:53:07 PDT
EWS
Comment 3 2026-05-26 09:01:05 PDT
Committed 313890@main (0753fb1b0e02): <https://commits.webkit.org/313890@main> Reviewed commits have been landed. Closing PR #65680 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.