REGRESSION(313872@main): Private field 'm_shouldSkipFrame' is not used https://bugs.webkit.org/show_bug.cgi?id=315572 rdar://177954108

Unreviewed build fix.

* Source/WebCore/Modules/webxr/XRWebGLLayerBacking.h:

Canonical link: https://commits.webkit.org/313890@main